--- a/style.css
+++ b/style.css
@@ -688,6 +688,13 @@
             background-repeat: no-repeat;
         }
 
+        #jove-business .flip-back {
+            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/business.webp');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
         #accessengineering .flip-back {
             background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/eng.webp');
             background-size: cover;
