--- a/style.css
+++ b/style.css
@@ -421,7 +421,7 @@
 
         .nav-links a:hover,
         .nav-links .group>a:hover {
-            color: #1e0e50;
+            color: #6C63FF;
         }
 
         .nav-links .group .dropdown {
