--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
         body {
             font-family: 'Inter', sans-serif;
             color: #220f60;
+            overflow-x: hidden;
         }
 
         .bg-primary {
