--- a/style.css
+++ b/style.css
@@ -1053,21 +1053,17 @@ body.translating * {
 
 .hero-slider {
     display: flex;
-    width: max-content; /* tüm slide'ların toplam genişliğini sağlar, translateX ile düzgün kaydırır */
+    width: 100%;
     height: 100%;
     transition: transform 0.5s ease-in-out;
 }
 
 .hero-slide {
-    flex: 0 0 100%; /* her slide kapsayıcının %100'ünü alır */
-    min-width: 100%;
+    flex-shrink: 0;
     width: 100%;
     height: 100%;
     position: relative;
 }
-/* Eğer JS'iniz translateX(-100vw * index) kullanıyorsa, yerine bu satırları kullanın:
-.hero-slide { flex: 0 0 100vw; min-width: 100vw; width: 100vw; }
-*/
 
 .hero-bg-image {
     position: absolute;
