--- a/style.css
+++ b/style.css
@@ -157,6 +157,8 @@
             height: 100%;
             transition: transform 0.6s;
             transform-style: preserve-3d;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
         }
 
         .flip-front,
